--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:textDirection="rtl"
     android:orientation="vertical"
     tools:background="@drawable/background_main">
 
@@ -32,14 +34,14 @@
                 android:id="@+id/btn_game_cancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/background_rv_item"
+                android:layout_marginEnd="8dp"
                 android:text="انصراف" />
+
             <Button
                 android:id="@+id/btn_game_acceptAction"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="8dp"
-                android:background="@drawable/background_primary_button"
                 android:text="تایید" />
         </LinearLayout>
     </FrameLayout>
