--- a/app/src/main/res/layout/item_char.xml
+++ b/app/src/main/res/layout/item_char.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="50dp"
     android:layout_height="50dp"
+    android:textDirection="rtl"
     android:layout_margin="4dp"
 
     android:background="@drawable/background_rv_item"
