--- a/app/src/main/res/layout/item_level.xml
+++ b/app/src/main/res/layout/item_level.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
+    android:textDirection="rtl"
     android:background="@drawable/background_rv_item"
     android:orientation="vertical"
     android:padding="16dp">
